# object-detection-yolov5-fastapi

./: .dockerignore  .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  docker-compose.yml  dockerfile  pre-commit-check.yaml  pyproject.toml
.github/: CODEOWNERS  settings.yaml
.github/workflows/: container-build.yml  object-detection-pipeline.yml
apis/: app.py
core/: base_detector.py
docker/: Dockerfile.ci  docker-compose.yml  dockerfile
helpers/: results_to_json.py  yolov5.py
src/object_detection_yolov5/core/: base_detector.py
src/object_detection_yolov5/helpers/: results_to_json.py
tests/: test_example_pytest.py
utils/: nms.py  yolov5.py
