[tool.poetry]
name = "object-detection-yolov5"
version = "0.1.0"
description = "Object Detection using Yolov5"
authors = ["olahsymbo <olahsymbo@gmail.com>"]
readme = "README.md"
#packages = [{include = "object_detection_yolov5"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
opencv-python = "^4.7.0.68"
torch = "^1.13.1"
pandas = "^1.5.3"
requests = "^2.28.2"
ipython = "^8.10.0"
pillow = "^9.4.0"
psutil = "^5.9.4"
torchvision = "^0.14.1"
pyyaml = "^6.0"
tqdm = "^4.64.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
websockets = "10.0"
gitpython = "^3.1.31"
scipy = "1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
